# Matrix

./: CMakeLists.txt  README.md  cmat.hpp  convention.md  copy_fast.hpp  hmat.hpp  imat.hpp  mat_ops.cpp  mat_ops.hpp  meson.build  meson_options.txt  smat.hpp
CUDA/: CMakeLists.txt
benchmarks/: arith_p1.cpp  arith_p2.cpp  handwritten_vs_generic.cpp  i7-6700K.txt
dependencies/: cmat.hpp  is_vector.hpp
include/: smat.hpp
matrix/std/: arithmetic_ops.hpp  derivative_mats.hpp  generic_ops.hpp  special_ops.hpp  util_ops.hpp
matrix/std/depedencies/: cmat.hpp  is_vector.hpp
matrix/std/dependencies/: cmat.hpp  copy_fast.hpp  is_vector.hpp
operations/: arithmetic.cpp  arithmetic_ops.hpp  generic_ops.hpp  misc_ops.hpp  other_ops.hpp
operations/cuda/: README.md
operations/std/: arithmetic_ops.hpp  derivative_mats.hpp  generic_ops.hpp  special_ops.hpp  util_ops.hpp
operations/std/11+/: arithmetic_ops.hpp  derivative_mats.hpp  generic_ops.hpp  is_constexpr_mat.hpp  is_vector.hpp  misc_ops.hpp  special_ops.hpp  util_ops.hpp
operations/std/11+/depedencies/: is_constexpr_mat.hpp
operations/std/20/: arithmetic_ops.hpp  derivative_mats.hpp  generic_ops.hpp  is_vector.hpp  misc_ops.hpp  special_ops.hpp  util_ops.hpp
operations/std/depedencies/: cmat.hpp  is_constexpr_mat.hpp  is_vector.hpp  v_sep.hpp
std/: arithmetic_ops.hpp  generic_ops.hpp  hmat.hpp  ml_ops.hpp  smat.hpp  special_ops.hpp  util_ops.hpp
std/dependencies/: cmat.hpp  copy_fast.hpp  is_vector.hpp  pow.hpp
subprojects/: matrix.wrap
subprojects/matrix-cuda/: meson.build
subprojects/matrix-cuda/matrix/cuda/: todo.md
