cmake_minimum_required(VERSION 3.5.1)
message(STATUS "CMake version: ${CMAKE_VERSION}")
option(USE_CUDA "Use CUDA" ON)

file(GLOB gpu_source_files "${CMAKE_CURRENT_LIST_DIR}/operations/cuda/*.cu")

if(USE_CUDA)
    find_package(CUDA)
    if(NOT CUDA_FOUND)
        message(STATUS "CUDA not found")
        set(USE_CUDA OFF)
    else()
        CUDA_ADD_LIBRARY(matrix_cuda ${gpu_source_files})
    endif()
endif()

message(STATUS "USE_CUDA: ${USE_CUDA}")
if(USE_CUDA)
    add_definitions(-DUSE_CUDA)
endif()